--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Evan</title>
+		<link href = "/css/main.css" rel = "stylesheet" type = "text/css">
 	</head>
 	<body>
 		<nav>
