--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Evan</title>
-		<link href = "/css/main.css" rel = "stylesheet" type = "text/css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Evan!</h1>
-				<p>I... <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="">email</a></li>
-        		<li><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
-			</ul>
-		</footer>
-	</body>
+
+<head>
+    <title>Evan</title>
+    <link href="/css/main.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/resume">Resume</a></li>
+            <li><a href="/currentProjects">Current Projects</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div class="blurb">
+            <h1>Hi there, I'm Evan!</h1>
+            <p>I am currently a Universtiy of Michigan student persuing a Bachelor's of Business Administration at the Ross School of business with a Minor in CS <a href="/about">Read more about my life...</a></p>
+        </div>
+        <!-- /.blurb -->
+    </div>
+    <!-- /.container -->
+    <footer>
+        <ul>
+            <li><a href="">email (not currently listed)</a></li>
+            <li><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
+        </ul>
+    </footer>
+</body>
+
 </html>
