--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="blurb">
             <h1>Hi there, I'm Evan!</h1>
-            <p>I am currently a Universtiy of Michigan student persuing a Bachelor's of Business Administration at the Ross School of business with a Minor in CS <a href="/about">Read more about my life...</a></p>
+            <p>I am currently a Universtiy of Michigan student pursuing a Bachelor's of Business Administration at the Ross School of business with a Minor in CS <a href="/about">Read more about my life...</a></p>
         </div>
         <!-- /.blurb -->
     </div>
