--- a/index.html
+++ b/index.html
@@ -1,34 +1,9 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Evan</title>
-    <link href="/css/main.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/resume">Resume</a></li>
-            <li><a href="/currentProjects">Current Projects</a></li>
-        </ul>
-    </nav>
-    <div class="container">
-        <div class="blurb">
-            <h1>Hi there, I'm Evan!</h1>
-            <p>I am currently a Universtiy of Michigan student pursuing a Bachelor's of Business Administration at the Ross School of business with a Minor in CS <a href="/about">Read more about my life...</a></p>
-        </div>
-        <!-- /.blurb -->
-    </div>
-    <!-- /.container -->
-    <footer>
-        <ul>
-            <li><a href="">email (not currently listed)</a></li>
-            <li><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
-        </ul>
-    </footer>
-</body>
-
-</html>
+---
+layout: default
+title: Evan Colony
+---
+<div class="blurb">
+	<h1>Hi there, I'm Evan!</h1>
+	<p>I am current University of Michgian student pursuing a Bachelor's 
+       of Business Amdinistration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
