Added simpple text changes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
----
-layout: default
-title: Evan Colony
----
+--- layout: default title: Evan Colony ---
 <div class="blurb">
-	<h1>Hi there, I'm Evan!</h1>
-	<p>I am current University of Michgian student pursuing a Bachelor's 
-       of Business Amdinistration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+    <h1>Hi there, I'm Evan!</h1>
+    <p>I am current University of Michgian student pursuing a Bachelor's of Business Amdinistration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
+</div>
+<!-- /.blurb -->
