--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
---- layout: default title: Evan Colony ---
+--- 
+layout: default 
+title: Evan Colony 
+---
 <div class="blurb">
     <h1>Hi there, I'm Evan!</h1>
     <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
