--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
     <!-- link to main stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <title>{{ page.title }}</title>
+    <title>Evan Colony</title>
 </head>
 
 <body>
     <header class="container">
         <nav class="row">
-            <ul class="col-sm-7">
+            <ul class="col-sm-8">
                 <li class="col-sm-1"><a href="/">Home</a></li>
                 <li class="col-sm-1"><a href="/about">About</a></li>
                 <li class="col-sm-1"><a href="/resume">Resume</a></li>
                 <li class="col-sm-3"><a href="/currentProjects">Current Projects</a></li>
             </ul>
+            <!-- /.col-sm-8 -->
         </nav>
+        <!-- /.row -->
     </header>
+    <!-- /.container -->
 
     <div class="container">
         <div class="blurb">
@@ -32,17 +35,21 @@
         <!-- /.blurb -->
     </div>
     <!-- /.container -->
-    <footer class="container">
-        <div class="row">
-            <ul class="col-sm-8">
-                <li class="col-sm-4"><a href="">email (not currently listed)</a></li>
-                <li class="col-sm-4"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
-            </ul>
-
-            <p class="col-sm-4 pull-right"><small><a href="/site" title="About this site">About this site</a></small></p>
-        </div>
-    </footer>
 
 </body>
+
+<footer class="container">
+    <div class="row">
+        <ul class="col-sm-8">
+            <li class="col-sm-4"><a href="">Email (not currently listed)</a></li>
+            <li class="col-sm-4"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
+        </ul>
+        <!-- /.col-sm-8 -->
+
+        <p class="pull-right"><a href="/site" title="About this site">About this site</a></p>
+    </div>
+    <!-- /.row -->
+</footer>
+<!-- /.container -->
 
 </html>
