Final change before moving back to Jekyll

--- a/resume/index.html
+++ b/resume/index.html
@@ -28,25 +28,36 @@
     <!-- /.container -->
 
     <div class="container">
-        <div class="blurb">
-            <h1>Hi there, I'm Evan!</h1>
-            <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
+        <div class="row">
+            <h1>My Resume</h1>
         </div>
-        <!-- /.blurb -->
-    </div>
-    <!-- /.container -->
-
+        <!-- /.row -->
+        <div class="row">
+            <div class="col-sm-2"> </div>
+                <div class="col-sm-10">
+                    <div class="col-sm-5">
+                        <p>This is a test I am trying to fill the entire DIV to see where it end and where it starts</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p>This is a test I am trying to fill the entire DIV to see where it end and where it starts</p>
+                    </div>
+                </div>
+                <!-- /.col-sm-10 -->
+                <div class="col-sm-2"></div>
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
 </body>
 
 <footer class="container">
     <div class="row">
         <ul class="col-sm-8">
-            <li class="col-sm-4"><small><a href="">email (not currently listed)</a></small></li>
-            <li class="col-sm-4"><small><a href="https://github.com/colonyevan">github.com/colonyevan</a></small></li>
+            <li class="col-sm-4"><a href="">Email (not currently listed)</a></li>
+            <li class="col-sm-4"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
         </ul>
         <!-- /.col-sm-8 -->
-
-        <p class="col-sm-4 pull-right"><small><a href="/site" title="About this site">About this site</a></small></p>
+        <p class="pull-right"><a href="/site" title="About this site">About this site</a></p>
     </div>
     <!-- /.row -->
 </footer>
