--- a/site/index.html
+++ b/site/index.html
@@ -9,9 +9,9 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
     <!-- link to main stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <title>Evan Colony</title>
+    <title>About this Site</title>
 </head>
-
+s
 <body>
     <header class="container">
         <nav class="row">
@@ -35,7 +35,6 @@
         <!-- /.blurb -->
     </div>
     <!-- /.container -->
-
 </body>
 
 <footer class="container">
@@ -45,7 +44,6 @@
             <li class="col-sm-4"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
         </ul>
         <!-- /.col-sm-8 -->
-
         <p class="pull-right"><a href="/site" title="About this site">About this site</a></p>
     </div>
     <!-- /.row -->
