Worked on jekyll content

--- a/index.html
+++ b/index.html
@@ -1,53 +1,9 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8" />
-    <!-- Link to Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <!-- Link to fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-    <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <title>Evan Colony</title>
-</head>
-
-<body>
-    <header class="container">
-        <nav class="row">
-            <ul class="col-sm-8">
-                <li class="col-sm-1"><a href="/">Home</a></li>
-                <li class="col-sm-1"><a href="/about">About</a></li>
-                <li class="col-sm-1"><a href="/resume">Resume</a></li>
-                <li class="col-sm-3"><a href="/currentProjects">Current Projects</a></li>
-            </ul>
-            <!-- /.col-sm-8 -->
-        </nav>
-        <!-- /.row -->
-    </header>
-    <!-- /.container -->
-
-    <div class="container">
-        <div class="blurb">
-            <h1>Hi there, I'm Evan!</h1>
-            <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
-        </div>
-        <!-- /.blurb -->
-    </div>
-    <!-- /.container -->
-</body>
-
-<footer class="container">
-    <div class="row">
-        <ul class="col-sm-8">
-            <li class="col-sm-4"><a href="">Email (not currently listed)</a></li>
-            <li class="col-sm-4"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
-        </ul>
-        <!-- /.col-sm-8 -->
-        <p class="pull-right"><a href="/site" title="About this site">About this site</a></p>
-    </div>
-    <!-- /.row -->
-</footer>
-<!-- /.container -->
-
-</html>
+--- 
+layout: default
+title: Evan Colony
+---
+<div class="blurb">
+    <h1>Hi there, I'm Evan!</h1>
+    <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
+</div>
+<!-- /.blurb -->
