--- a/resume/index.html
+++ b/resume/index.html
@@ -1,66 +1,18 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8" />
-    <!-- Link to Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <!-- Link to fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-    <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <title>Evan Colony</title>
-</head>
-
-<body>
-    <header class="container">
-        <nav class="row">
-            <ul class="col-sm-8">
-                <li class="col-sm-1"><a href="/">Home</a></li>
-                <li class="col-sm-1"><a href="/about">About</a></li>
-                <li class="col-sm-1"><a href="/resume">Resume</a></li>
-                <li class="col-sm-3"><a href="/currentProjects">Current Projects</a></li>
-            </ul>
-            <!-- /.col-sm-8 -->
-        </nav>
-        <!-- /.row -->
-    </header>
-    <!-- /.container -->
-
-    <div class="container">
-        <div class="row">
-            <h1>My Resume</h1>
+--- 
+layout: default
+title: My Resume
+---
+<div class="row">
+    <div class="col-sm-2"> </div>
+    <div class="col-sm-10">
+        <div class="col-sm-5">
+            <p>This is a test I am trying to fill the entire DIV to see where it end and where it starts</p>
         </div>
-        <!-- /.row -->
-        <div class="row">
-            <div class="col-sm-2"> </div>
-                <div class="col-sm-10">
-                    <div class="col-sm-5">
-                        <p>This is a test I am trying to fill the entire DIV to see where it end and where it starts</p>
-                    </div>
-                    <div class="col-sm-5">
-                        <p>This is a test I am trying to fill the entire DIV to see where it end and where it starts</p>
-                    </div>
-                </div>
-                <!-- /.col-sm-10 -->
-                <div class="col-sm-2"></div>
-            </div>
-            <!-- /.row -->
+        <div class="col-sm-5">
+            <p>This is a test I am trying to fill the entire DIV to see where it end and where it starts</p>
         </div>
-        <!-- /.container -->
-</body>
-
-<footer class="container">
-    <div class="row">
-        <ul class="col-sm-8">
-            <li class="col-sm-4"><a href="">Email (not currently listed)</a></li>
-            <li class="col-sm-4"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
-        </ul>
-        <!-- /.col-sm-8 -->
-        <p class="pull-right"><a href="/site" title="About this site">About this site</a></p>
     </div>
-    <!-- /.row -->
-</footer>
-<!-- /.container -->
-
-</html>
+    <!-- /.col-sm-10 -->
+    <div class="col-sm-2"></div>
+</div>
+<!-- /.row -->
