--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Evan Colony
 ---
-<div class="blurb">
+<div class="container">
     <h1>Hi there, I'm Evan!</h1>
     <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
 </div>
