--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
---- 
+---
 layout: default
 title: Evan Colony
 ---
 <div class="container">
-    <h1>Hi there, I'm Evan!</h1>
-    <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
+    <div class="row">
+        <h1>Hi there, I'm Evan!</h1>
+    </div>
+    <!-- /.row -->
+    <div class="row">
+        <div class="col-sm-4">
+            <img class="img-circle avatar" alt="Evan Colony" src="imgage/Evan-Colony.jpeg">
+        </div>
+        <!-- /.col-sm-4 -->
+        <div class="col-sm-8">
+            <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
+        </div>
+        <!-- /.col-sm-8 -->
+    </div>
+    <!-- /.row -->
 </div>
-<!-- /.blurb -->
+<!-- /.container -->
