--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Evan Colony
     <!-- /.row -->
     <div class="row">
         <div class="col-sm-4">
-            <img class="img-circle avatar" alt="Evan Colony" src="imgage/Evan-Colony.jpeg">
+            <img class="img-circle avatar" alt="Evan Colony" src="imgage/Evan-Colony.png">
         </div>
         <!-- /.col-sm-4 -->
         <div class="col-sm-8">
