--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@ title: Evan Colony
             <img class="img-circle avatar" alt="Evan Colony" src="imgage/Evan-Colony.png">
         </div>
         <!-- /.col-sm-4 -->
-        <div class="col-sm-8">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-6">
             <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
         </div>
-        <!-- /.col-sm-8 -->
+        <!-- /.col-sm-6 -->
+        <div class="col-sm-1"></div>
     </div>
     <!-- /.row -->
 </div>
