--- a/currentProjects/index.html
+++ b/currentProjects/index.html
@@ -3,7 +3,8 @@ layout: default
 title: Evan Colony
 ---
 <div class="blurb">
-    <h1>Hi there, I'm Evan!</h1>
-    <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
+    <h1>Monopoly</h1>
+    <p>My interst in this project began in my senior yaer of high school when I had to develop anything (particularly a game) for part of an AP class. I was having a lot of trouble deciding until I finally setteled on Monopoloy. I quickly realized that this game would be signifacntly beyond my current abilites, so I setteled on a very simplistic version of the game (it didn't even have monopolies). After finsihing the project and turning it in it sat, untouched, until my second semester at here at Michigan, where EECS 183 renewed my interest in programming and I decided that I wanted to come back to the game and make it true to all the rules. So, I complelety restarted and began from scratch. I have succesfully writen the functions pertating to board development, with the board being a vector of 40 differetn tile classes, jail, and a vector of all the players. Currently, I am working on purchasing property, both the tiles and the houses and hotels that go on them. </p> 
+    <p>Unfortuantly, I can't post my work on this project becasue Monopoly is a copywritten product, however, I will make sure to update this page with my progress. </p>
 </div>
 <!-- /.blurb -->
