--- a/currentProjects/index.html
+++ b/currentProjects/index.html
@@ -3,9 +3,17 @@ layout: default
 title: Evan Colony
 ---
 <div class="blurb">
-    <h1>Monopoly</h1>
-    <p> &emsp; My interst in this project began in my senior yaer of high school when I had to develop anything (particularly a game) for part of an AP class. I was having a lot of trouble deciding until I finally setteled on Monopoloy. I quickly realized that this game would be signifacntly beyond my current abilites, so I setteled on a very simplistic version of the game (it didn't even have monopolies). After finsihing the project and turning it in it sat, untouched, until my second semester at here at Michigan, where EECS 183 renewed my interest in programming and I decided that I wanted to come back to the game and make it true to all the rules. So, I complelety restarted and began from scratch. I have succesfully writen the functions pertating to board development, with the board being a vector of 40 differetn tile classes, jail, and a vector of all the players. Currently, I am working on purchasing property, both the tiles and the houses and hotels that go on them. </p> 
-    <p></p>
-    <p> &emsp; Unfortuantly, I can't post my work on this project becasue Monopoly is a copywritten product, however, I will make sure to update this page with my progress. </p>
+    <div class="row">
+        <h1>Current Projects</h1>
+    </div>
+    <!-- /.row -->
+    <div class="row">
+        <h3>Classical Games</h3>
+    </div>
+    <!-- /.row -->
+    <div class="row">
+        <p>&emsp;One of my main projects is recreating classical games in the terminal via C++. This games include Monoploy, Tic-Tac-Toe and Connect 4. Evntaully I plan on using GLUT to make the games visually appealing on top of the functionality. In addition to the grapihcs, I also am attempting to implement AI for all of these games. <a href="">Read more about these projets here...</a></p>
+    </div>
+    <!-- /.row -->
 </div>
 <!-- /.blurb -->
