Made about this site page

--- a/site/index.html
+++ b/site/index.html
@@ -4,5 +4,8 @@ title: Evan Colony
 ---
 <div class="blurb">
     <h1>About this Site</h1>
+    <p>This website is hosted on Github and takes advantage of the integration with Jekyll</p>
+    <p>I have styled this with bootstrap</p>
+    <p>This website is a work in progress</p>
 </div>
 <!-- /.blurb -->
