--- a/resume/index.html
+++ b/resume/index.html
@@ -3,12 +3,62 @@ layout: default
 title: My Resume
 ---
 <div class="row">
+    <h1>My Resume</h1>
+</div>
+<!-- /.row -->
+<div class="row">
     <div class="col-sm-1"> </div>
         <div class="col-sm-5">
-            <p>This is a test I am trying to fill the entire DIV to see where it end and where it starts</p>
+            <h3>Education</h3>
+            <h4>University Of Michigan</h4>
+            <p><i>Ross School of Business</i></p>
+            <p>Fall 2017 - Present</p>
+            <ul>
+                <li>Bachelor's of Business Administration with a concentration in strategy</li>
+                <li>Also persuing a Minor in Computer Science</li>
+                <li>Involved in MLead and Michigan Business Club</li>
+            </ul>
+            <h4>Muscatine Community College</h4>
+            <p>Fall 2014 - Spring 2017</p>
+            <ul>
+                <li>Studies in Computer Science and Business</li>
+                <li>Dual-Enrolled throughout high school</li>
+            </ul>
+            <h4>Muscatine High School</h4>
+            <p>Fall 2013 - Spring 2017</p>
+            <ul>
+                <li>4.0 out of 4.0 GPA</li>
+                <li>1 of 349 in my gradutating class</li>
+                <li>AP Scholar with Distinction, Excellence in Education Award Recipient, 8-semester Honor Roll Student. </li>
+                <li>Involved in Student Council (multipe committee positions), Peer Tutoring (president), National Honors Society, and Soccer.</li>
+            </ul>
         </div>
         <div class="col-sm-5">
-            <p>This is a test I am trying to fill the entire DIV to see where it end and where it starts</p>
+            <h3>Experience</h3>
+            <h4>Carver Pump Company</h4>
+            <p>Starting May 2018</p>
+            <p>Summer Marketing and Sales Intern</p>
+            <h4>Hy-Vee</h4>
+            <p>June 2017 - August 2018</p>
+            <ul>
+                <li>Rapidly promoted from courtesy clerk to cashier</li>
+                <li>Often asked to preform management level tasks</li>
+            </ul>
+            <h3>SKills, Strengths, and Intersts</h3>
+            <h4>Skills</h4>
+            <p>Proficent in Microsoft Office</p>
+            <h5>Langauges</h5>
+            <ul>
+                <li>Past studies in Mandarin</li>
+                <li>C++, HTML, CSS</li>
+            </ul>
+            <h4>Strengths</h4>
+            <ul>
+                <li>Effective <b>LEADER</b> with strong analytical skills and superior multitasking abilities, capable of seeing both “big picture” and handling minutiae </li>
+                <li>Strong <b>TEAM PLAYER</b> with positive record for building lasting professional relationships with diverse groups and individuals</li>
+                <li>Experienced <b>ARBITRATOR</b> with demonstrated ability to communicate effectively while maintaining objectivity and sensitivity</li>
+                <li>Skilled <b>WORKER</b> with advanced knowledge of computers, both software and hardware</li>
+            </ul>
         </div>
     <!-- /.col-sm-10 -->
     <div class="col-sm-1"></div>
