--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,4 @@
---- 
+---
 layout: default
 title: My Resume
 ---
@@ -6,11 +6,12 @@ title: My Resume
     <h1>My Resume</h1>
 </div>
 <!-- /.row -->
-<div class="row">
-    <div class="col-sm-1"> </div>
+<div class="resume">
+    <div class="row">
+        <div class="col-sm-1"> </div>
         <div class="col-sm-5">
-            <h3>Education</h3>
-            <h4>University Of Michigan</h4>
+            <h2>Education</h2>
+            <h3>University Of Michigan</h3>
             <p><i>Ross School of Business</i></p>
             <p>Fall 2017 - Present</p>
             <ul>
@@ -34,20 +35,20 @@ title: My Resume
             </ul>
         </div>
         <div class="col-sm-5">
-            <h3>Experience</h3>
-            <h4>Carver Pump Company</h4>
+            <h2>Experience</h2>
+            <h3>Carver Pump Company</h3>
             <p>Starting May 2018</p>
             <p>Summer Marketing and Sales Intern</p>
-            <h4>Hy-Vee</h4>
+            <h3>Hy-Vee</h3>
             <p>June 2017 - August 2018</p>
             <ul>
                 <li>Rapidly promoted from courtesy clerk to cashier</li>
                 <li>Often asked to preform management level tasks</li>
             </ul>
-            <h3>SKills, Strengths, and Intersts</h3>
-            <h4>Skills</h4>
+            <h2>Skills, Strengths, and Intersts</h2>
+            <h3>Skills</h3>
             <p>Proficent in Microsoft Office</p>
-            <h5>Langauges</h5>
+            <h4>Langauges</h4>
             <ul>
                 <li>Past studies in Mandarin</li>
                 <li>C++, HTML, CSS</li>
@@ -60,7 +61,9 @@ title: My Resume
                 <li>Skilled <b>WORKER</b> with advanced knowledge of computers, both software and hardware</li>
             </ul>
         </div>
-    <!-- /.col-sm-10 -->
-    <div class="col-sm-1"></div>
+        <!-- /.col-sm-10 -->
+        <div class="col-sm-1"></div>
+    </div>
+    <!-- /.row -->
 </div>
-<!-- /.row -->
+<!-- /.resume -->
