--- a/resume/index.html
+++ b/resume/index.html
@@ -53,12 +53,17 @@ title: My Resume
                 <li>Past studies in Mandarin</li>
                 <li>C++, HTML, CSS</li>
             </ul>
-            <h4>Strengths</h4>
+            <h2>Strengths</h2>
             <ul>
                 <li>Effective <b>LEADER</b> with strong analytical skills and superior multitasking abilities, capable of seeing both “big picture” and handling minutiae </li>
                 <li>Strong <b>TEAM PLAYER</b> with positive record for building lasting professional relationships with diverse groups and individuals</li>
                 <li>Experienced <b>ARBITRATOR</b> with demonstrated ability to communicate effectively while maintaining objectivity and sensitivity</li>
                 <li>Skilled <b>WORKER</b> with advanced knowledge of computers, both software and hardware</li>
+            </ul>
+            <h2>Intersts</h2>
+            <ul>
+                <li>Computer construction</li>
+                <li>Business and its intersections with technology</li>
             </ul>
         </div>
         <!-- /.col-sm-10 -->
