--- a/resume/index.html
+++ b/resume/index.html
@@ -12,21 +12,21 @@ title: My Resume
         <div class="col-sm-5">
             <h2>Education</h2>
             <h3>University Of Michigan</h3>
-            <p id="Resume-Tag"><i>Ross School of Business</i></p>
-            <p id="Resume-Tag">Fall 2017 - Present</p>
+            <p id="Resume"><i>Ross School of Business</i></p>
+            <p id="Resume">Fall 2017 - Present</p>
             <ul>
                 <li>Bachelor's of Business Administration with a concentration in strategy</li>
                 <li>Also persuing a Minor in Computer Science</li>
                 <li>Involved in MLead and Michigan Business Club</li>
             </ul>
             <h4>Muscatine Community College</h4>
-            <p id="Resume-Tag">Fall 2014 - Spring 2017</p>
+            <p id="Resume">Fall 2014 - Spring 2017</p>
             <ul>
                 <li>Studies in Computer Science and Business</li>
                 <li>Dual-Enrolled throughout high school</li>
             </ul>
             <h4>Muscatine High School</h4>
-            <p id="Resume-Tag">Fall 2013 - Spring 2017</p>
+            <p id="Resume">Fall 2013 - Spring 2017</p>
             <ul>
                 <li>4.0 out of 4.0 GPA</li>
                 <li>1 of 349 in my gradutating class</li>
@@ -37,17 +37,18 @@ title: My Resume
         <div class="col-sm-5">
             <h2>Experience</h2>
             <h3>Carver Pump Company</h3>
-            <p id="Resume-Tag">Starting May 2018</p>
-            <p id="Resume-Tag">Summer Marketing and Sales Intern</p>
+            <p id="Resume">Starting May 2018</p>
+            <p id="Resume">Summer Marketing and Sales Intern</p>
             <h3>Hy-Vee</h3>
-            <p id="Resume-Tag">June 2017 - August 2018</p>
+            <p id="Resume">June 2017 - August 2018</p>
+            <p id="Resume">Cashier</p>
             <ul>
                 <li>Rapidly promoted from courtesy clerk to cashier</li>
                 <li>Often asked to preform management level tasks</li>
             </ul>
             <h2>Skills, Strengths, and Intersts</h2>
             <h3>Skills</h3>
-            <p id="Resume-Tag">Proficent in Microsoft Office</p>
+            <p id="Resume">Proficent in Microsoft Office</p>
             <h4>Langauges</h4>
             <ul>
                 <li>Past studies in Mandarin</li>
