--- a/resume/index.html
+++ b/resume/index.html
@@ -63,7 +63,7 @@ title: My Resume
             </ul>
             <h2>Intersts</h2>
             <ul>
-                <li>Computer construction</li>
+                <li>Computer construction, Web Development, and programming</li>
                 <li>Business and its intersections with technology</li>
             </ul>
         </div>
