--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,8 @@ layout: default
 title: My Resume
 ---
 <div class="row">
-    <h1>My Resume</h1>
+    <h1>Resume</h1>
+    <p class="pull-right">Evan Colony</p>
 </div>
 <!-- /.row -->
 <div class="resume">
