--- a/resume/index.html
+++ b/resume/index.html
@@ -3,8 +3,8 @@ layout: default
 title: My Resume
 ---
 <div class="row">
-    <h1>Resume</h1>
-    <p class="pull-right">Evan Colony</p>
+    <h1 class="col-sm-6">Resume</h1>
+    <p class="col-sm-6 pull-right">Evan Colony</p>
 </div>
 <!-- /.row -->
 <div class="resume">
