--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@ title: My Resume
 ---
 <div class="row">
     <h1 class="col-sm-6">Resume</h1>
-    <p class="col-sm-6 pull-right head">Evan Colony</p>
+    <p class="col-sm-6 pull-right" id="head">Evan Colony</p>
 </div>
 <!-- /.row -->
 <div class="resume">
