--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,6 @@ title: About Me
 <div class="container">
     <h1>Hi there, I'm Evan!</h1>
     <h3>Education</h3>
-    <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. Before coming to the University of Michigan I went to Muscatine High School. During high school I was the president of the Peer Tutoring Program while also involved in Student council, NHS, and a goalied for the JV soccer team.</p>
+    <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. Before coming to the University of Michigan I went to Muscatine High School. During high school I was the president of the Peer Tutoring Program while also involved in Student council, NHS, and a goalie for the JV soccer team.</p>
 </div>
 <!-- /.blurb -->
