First rework in a while...more to come

--- a/currentProjects/index.html
+++ b/currentProjects/index.html
@@ -12,7 +12,7 @@ title: Evan Colony
     </div>
     <!-- /.row -->
     <div class="row">
-        <p>&emsp;One of my main projects is recreating classical games in the terminal via C++. This games include Monoploy, Tic-Tac-Toe and Connect 4. Evntaully I plan on using GLUT to make the games visually appealing on top of the functionality. In addition to the grapihcs, I also am attempting to implement AI for all of these games. <a href="">Read more about these projets here...</a></p>
+        <p>&emsp;One of my main projects is recreating classical games in the terminal via C++. These games include Monoploy, Tic-Tac-Toe and Connect 4. Evntaully I plan on using GLUT to make the games visually appealing on top of the functionality. In addition to the grapihcs, I also am attempting to implement an AI for all of these games. <a href="">Read more about these projets here...</a></p>
     </div>
     <!-- /.row -->
 </div>
