--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,6 @@ title: About Me
 ---
 <div class="container">
     <h1>Hi there, I'm Evan!</h1>
-    <p>&emsp;I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. Before coming to the University of Michigan, I attended Muscatine High School where I was the president of the Peer Tutoring Program and active in our student government. I also participated in Mock Trial, the School Advisory Committee, and the National Honor Society and played goalie for the JV Soccer Team.</p>
+    <p>&emsp;I am a current University of Michigan student pursuing a Bachelor's of Business Administration with a minor in Computer Science. Before coming to the University of Michigan, I attended Muscatine High School where I was the president of the Peer Tutoring Program and active in our student government. I also participated in Mock Trial, the School Improvment Advisory Committee, the National Honor Society and played goalie for the JV Soccer Team.</p>
 </div>
 <!-- /.blurb -->
