--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,5 @@
----
-layout: default
+--- 
+layout: default 
 title: My Resume
 ---
 <div class="row">
@@ -12,63 +12,69 @@ title: My Resume
         <div class="col-sm-1"> </div>
         <div class="col-sm-5">
             <h2>Education</h2>
-            <h3>University Of Michigan</h3>
-            <p id="Resume"><i>Ross School of Business</i></p>
-            <p id="Resume">Fall 2017 - Present</p>
-            <ul>
-                <li>Bachelor's of Business Administration with a concentration in strategy</li>
-                <li>Also persuing a Minor in Computer Science</li>
-                <li>Involved in MLead and Michigan Business Club</li>
-            </ul>
-            <h4>Muscatine Community College</h4>
-            <p id="Resume">Fall 2014 - Spring 2017</p>
-            <ul>
-                <li>Studies in Computer Science and Business</li>
-                <li>Dual-Enrolled throughout high school</li>
-            </ul>
-            <h4>Muscatine High School</h4>
-            <p id="Resume">Fall 2013 - Spring 2017</p>
-            <ul>
-                <li>4.0 out of 4.0 GPA</li>
-                <li>1 of 349 in my gradutating class</li>
-                <li>AP Scholar with Distinction, Excellence in Education Award Recipient, 8-semester Honor Roll Student. </li>
-                <li>Involved in Student Council (multipe committee positions), Peer Tutoring (president), National Honors Society, and Soccer.</li>
-            </ul>
-        </div>
+                <h3>University Of Michigan</h3>
+                    <p id="Resume"><i>Ross School of Business</i></p>
+                    <p id="Resume">Fall 2017 - Present</p>
+                    <ul>
+                        <li>Bachelor's of Business Administration with a concentration in strategy</li>
+                        <li>Also persuing a Minor in Computer Science</li>
+                        <li>Involved in MLead and Michigan Business Club</li>
+                    </ul>
+                <h4>Muscatine Community College</h4>
+                    <p id="Resume">Fall 2014 - Spring 2017</p>
+                    <ul>
+                        <li>Studies in Computer Science and Business</li>
+                        <li>Dual-Enrolled throughout high school</li>
+                    </ul>
+                <h4>Muscatine High School</h4>
+                    <p id="Resume">Fall 2013 - Spring 2017</p>
+                    <ul>
+                        <li>4.0 out of 4.0 GPA</li>
+                        <li>1 of 349 in my gradutating class</li>
+                        <li>AP Scholar with Distinction, Excellence in Education Award Recipient, 8-semester Honor Roll Student. </li>
+                        <li>Involved in Student Council (multipe committee positions), Peer Tutoring (president), National Honors Society, and Soccer.</li>
+                    </ul>
+        </div> 
+        <!-- /.col-sm-5 -->
+        
         <div class="col-sm-5">
             <h2>Experience</h2>
-            <h3>Carver Pump Company</h3>
-            <p id="Resume">Starting May 2018</p>
-            <p id="Resume">Summer Marketing and Sales Intern</p>
+                <h3>Carver Pump Company</h3>
+                    <p id="Resume">April - August 2018</p>
+                    <p id="Resume">Summer Marketing and Sales Intern</p>
+                    <ul>
+                        <li>Develop a robust tool to anaylze Gross Margin for all product lines in a $40 million annual international manufacturing company</li>
+                        <li>Implemented a program to reduce lead times by over 97% on a $3 million annual product line</li>
+                    </ul>
             <h3>Hy-Vee</h3>
-            <p id="Resume">June 2017 - August 2018</p>
-            <p id="Resume">Cashier</p>
-            <ul>
-                <li>Rapidly promoted from courtesy clerk to cashier</li>
-                <li>Often asked to preform management level tasks</li>
-            </ul>
+                <p id="Resume">June 2017 - August 2018</p>
+                <p id="Resume">Cashier</p>
+                <ul>
+                    <li>Rapidly promoted from courtesy clerk to cashier</li>
+                    <li>Often asked to preform management level tasks</li>
+                </ul>
             <h2>Skills, Strengths, and Intersts</h2>
-            <h3>Skills</h3>
-            <p id="Resume">Proficent in Microsoft Office</p>
-            <h4>Langauges</h4>
-            <ul>
-                <li>Past studies in Mandarin</li>
-                <li>C++, HTML, CSS</li>
-            </ul>
-            <h2>Strengths</h2>
-            <ul>
-                <li>Effective <b>LEADER</b> with strong analytical skills and superior multitasking abilities, capable of seeing both “big picture” and handling minutiae </li>
-                <li>Strong <b>TEAM PLAYER</b> with positive record for building lasting professional relationships with diverse groups and individuals</li>
-                <li>Experienced <b>ARBITRATOR</b> with demonstrated ability to communicate effectively while maintaining objectivity and sensitivity</li>
-                <li>Skilled <b>WORKER</b> with advanced knowledge of computers, both software and hardware</li>
-            </ul>
-            <h2>Intersts</h2>
-            <ul>
-                <li>Computer construction, Web Development, and programming</li>
-                <li>Business and its intersections with technology</li>
-            </ul>
+                <h3>Skills</h3>
+                    <p id="Resume">Proficent in Microsoft Office</p>
+                <h4>Langauges</h4>
+                    <ul>
+                        <li>Past studies in Mandarin</li>
+                        <li>C++, HTML, CSS</li>
+                    </ul>
+                <h2>Strengths</h2>
+                    <ul>
+                        <li>Effective <b>LEADER</b> with strong analytical skills and superior multitasking abilities, capable of seeing both “big picture” and handling minutiae </li>
+                        <li>Strong <b>TEAM PLAYER</b> with positive record for building lasting professional relationships with diverse groups and individuals</li>
+                        <li>Experienced <b>ARBITRATOR</b> with demonstrated ability to communicate effectively while maintaining objectivity and sensitivity</li>
+                        <li>Skilled <b>WORKER</b> with advanced knowledge of computers, both software and hardware</li>
+                    </ul>
+                <h2>Intersts</h2>
+                    <ul>
+                        <li>Computer construction, Web Development, and programming</li>
+                        <li>Business and its intersections with technology</li>
+                    </ul>
         </div>
-        <!-- /.col-sm-10 -->
+        <!-- /.col-sm-5 -->
         <div class="col-sm-1"></div>
     </div>
     <!-- /.row -->
