--- a/resume/index.html
+++ b/resume/index.html
@@ -17,8 +17,13 @@ title: My Resume
                     <p id="Resume">Fall 2017 - Present</p>
                     <ul>
                         <li>Bachelor's of Business Administration with a concentration in strategy</li>
-                        <li>Also persuing a Minor in Computer Science</li>
-                        <li>Involved in MLead and Michigan Business Club</li>
+                        <li>Member, Michigan Business Club</li>
+                        <li>3.925/4.0 GPA</li>
+                    </ul>
+                    <p id="Resume">School of Literature, Science and the Arts</p>
+                    <p id="Resume">Fall 2017 - Present</p>
+                    <ul>
+                        <li>Minor in Computer Science</li>
                     </ul>
                 <h4>Muscatine Community College</h4>
                     <p id="Resume">Fall 2014 - Spring 2017</p>
@@ -26,10 +31,14 @@ title: My Resume
                         <li>Studies in Computer Science and Business</li>
                         <li>Dual-Enrolled throughout high school</li>
                     </ul>
+                <h4>Other Activities</h4>
+                    <ul>
+                        <li>Involved in MLead</li>
+                    </ul>
                 <h4>Muscatine High School</h4>
                     <p id="Resume">Fall 2013 - Spring 2017</p>
                     <ul>
-                        <li>4.0 out of 4.0 GPA</li>
+                        <li>4.0/4.0 GPA</li>
                         <li>1 of 349 in my gradutating class</li>
                         <li>AP Scholar with Distinction, Excellence in Education Award Recipient, 8-semester Honor Roll Student. </li>
                         <li>Involved in Student Council (multipe committee positions), Peer Tutoring (president), National Honors Society, and Soccer.</li>
@@ -46,13 +55,13 @@ title: My Resume
                         <li>Develop a robust tool to anaylze Gross Margin for all product lines in a $40 million annual international manufacturing company</li>
                         <li>Implemented a program to reduce lead times by over 97% on a $3 million annual product line</li>
                     </ul>
-            <h3>Hy-Vee</h3>
-                <p id="Resume">June 2017 - August 2018</p>
-                <p id="Resume">Cashier</p>
-                <ul>
-                    <li>Rapidly promoted from courtesy clerk to cashier</li>
-                    <li>Often asked to preform management level tasks</li>
-                </ul>
+                <h3>Hy-Vee</h3>
+                    <p id="Resume">June 2017 - August 2018</p>
+                    <p id="Resume">Cashier</p>
+                    <ul>
+                        <li>Rapidly promoted from courtesy clerk to cashier</li>
+                        <li>Often asked to preform management level tasks</li>
+                    </ul>
             <h2>Skills, Strengths, and Intersts</h2>
                 <h3>Skills</h3>
                     <p id="Resume">Proficent in Microsoft Office</p>
@@ -75,8 +84,10 @@ title: My Resume
                     </ul>
         </div>
         <!-- /.col-sm-5 -->
+        
         <div class="col-sm-1"></div>
     </div>
     <!-- /.row -->
+    
 </div>
 <!-- /.resume -->
