--- a/resume/index.html
+++ b/resume/index.html
@@ -25,7 +25,7 @@ title: My Resume
                     <ul>
                         <li>Minor in Computer Science</li>
                     </ul>
-                    <h4>Other Activities</h4>
+                    <p id="Resume">Other Activities</p>
                         <ul>
                             <li>Involved in MLead</li>
                         </ul>
