--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,7 @@ title: My Resume
                         <li>Member, Michigan Business Club</li>
                         <li>3.925/4.0 GPA</li>
                     </ul>
-                    <p id="Resume">School of Literature, Science and the Arts</p>
+                    <p id="Resume"><i>School of Literature, Science and the Arts</i></p>
                     <p id="Resume">Fall 2017 - Present</p>
                     <ul>
                         <li>Minor in Computer Science</li>
