--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Evan Colony
     </div>
     <!-- /.col-sm-4 -->
     <div class="col-sm-4">
-        <p>I am a current University of Michgian student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
+        <p>I am a current University of Michigan student pursuing a Bachelor's of Business Administration with a minor in Computer Science. <a href="/about">Read more about my life...</a></p>
     </div>
     <!-- /.col-sm-6 -->
 </div>
