--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,10 @@ title: Evan Colony
         </div>
         <!-- /.row -->
         
-        <!-- This website and its comments -->
+        <!-- 
+            This website and its comments 
+            ____________________________________________________________________________
+        -->
         <div class="row">
             <h3>This Website</h3>
         </div>
@@ -19,7 +22,10 @@ title: Evan Colony
             <p>&emsp;This website is a continous work in project and will be changed often as time goes on. I still ahve a lot to learn about HTML, CSS, Javascript, etc. This website is being constructed throuh many guides, the most useful of which has been <a href="http://jmcglone.com/guides/github-pages/">this</a> one. If you have any suggestions please email me using the link at the bottom of the page. </p>
         </div>
         
-        <!-- Classical games and its comments -->
+        <!-- 
+            Classical games and its comments 
+            ____________________________________________________________________________
+        -->
         <div class="row">
             <h3>Classical Games</h3>
         </div>
