--- a/resume/index.html
+++ b/resume/index.html
@@ -14,11 +14,13 @@ title: My Resume
             <h2>Education</h2>
                 <h3>University Of Michigan</h3>
                     <p id="Resume"><i>Ross School of Business</i></p>
+                    <p>Bachelors of Business Administration</p>
                     <p id="Resume">Fall 2017 - Present</p>
                     <ul>
-                        <li>Bachelor's of Business Administration with a concentration in strategy</li>
-                        <li>Member, Michigan Business Club</li>
                         <li>3.925/4.0 GPA</li>
+                        <li>Emphasis in strategy</li>
+                        <li>Business Analyst, Atlas Consulting Group</li>
+                        <li>Member, Michigan Business Club</li>
                     </ul>
                     <p id="Resume"><i>School of Literature, Science and the Arts</i></p>
                     <p id="Resume">Fall 2017 - Present</p>
@@ -52,8 +54,9 @@ title: My Resume
                     <p id="Resume">April - August 2018</p>
                     <p id="Resume">Summer Marketing and Sales Intern</p>
                     <ul>
-                        <li>Develop a robust tool to anaylze Gross Margin for all product lines in a $40 million annual international manufacturing company</li>
-                        <li>Implemented a program to reduce lead times by over 97% on a $3 million annual product line</li>
+                        <li>Pioneered new inventory program using self-developed Monte Carlo simulation in Excel with VBA, resulting in 94% decrease in lead times on $2.5 million annual product line</li>
+                        <li>Created effective tool to analyze individual gross margins on over $25 million of merchandise using Power BI, allowing for new insights into multiple product lines</li>
+                        <li>Interacted with all departments of $35 million manufacturing business shipping internationally, ensuring comprehensive business learning experience</li>
                     </ul>
                 <h3>Hy-Vee</h3>
                     <p id="Resume">June 2017 - August 2018</p>
