--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,7 @@ title: My Resume
             <h2>Education</h2>
                 <h3>University Of Michigan</h3>
                     <p id="Resume"><i>Ross School of Business</i></p>
-                    <p>Bachelors of Business Administration</p>
+                    <p id="Resume">Bachelors of Business Administration</p>
                     <p id="Resume">Fall 2017 - Present</p>
                     <ul>
                         <li>3.925/4.0 GPA</li>
